finish shopping cart css, fix layout and the extra space below footer

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 /* global */
 body, html {
-    margin:0;
-    padding:0;
-    background-color: white;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
 }
 
 /* header.html */
@@ -104,7 +110,7 @@ body, html {
     line-height: normal;
 }
 
-.growing-trend {
+.title-text {
     text-align: center;
     color: #000;
     font-family: Rufina;
@@ -170,26 +176,6 @@ body, html {
     align-items: center;
 }
 
-.product-name {
-    text-align: left;
-    padding-left: 5%;
-    color: #000;
-    font-family: 'Noto serif';
-    font-size: 18px;
-    font-weight: 400;
-    line-height: normal;
-}
-
-.product-price {
-    text-align: right;
-    padding-right: 5%;
-    color: #000;
-    font-family: 'Noto serif';
-    font-size: 18px;
-    font-weight: 400;
-    line-height: normal;
-}
-
 /*browse-product.html*/
 .search-result {
     text-align: center;
@@ -222,11 +208,11 @@ body, html {
 .footer {
     display: flex;
     align-items: center;
-    justify-content: center;justify-content: center;
+    justify-content: center;
     width:100%;
     height: 60px;
     margin-top: 2%;
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(236, 236, 236); 
 }
 
 .footer-text {
@@ -239,4 +225,109 @@ body, html {
     font-weight: 400;
     line-height: normal;
     
+}
+
+/*shoopping-cart.html*/
+
+.cart-container {
+  max-width: 1182px;
+  margin: auto;
+  padding: 20px;
+}
+
+.cart-title-text {
+    color: #000;
+    font-family: "Noto Serif";
+    font-size: 40px;
+    font-weight: 500;
+}
+.cart-product {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 1182px;
+  margin: auto;
+}
+
+.cart-item {
+  display: grid;
+  grid-template-columns: 150px 1fr 64px; 
+  align-items: center;
+  gap: 20px;
+  padding: 15px;
+  border: 1px solid #000;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.product-img {
+    width: 150px;
+    height: 150px;
+    border: 1px solid #7FBA19;
+}
+
+.num-img {
+    width: 64px;
+    height: 27px;
+    justify-self: end;
+}
+
+.product-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-self: start;
+    gap: 10px;
+}
+
+.product-name, .product-price {
+  text-align: left; 
+  margin: 0;
+}
+
+.product-name {
+  font-size: 24px;
+  font-weight: bold;
+    
+}
+
+.product-price {
+  font-size: 18px;
+  color: #000;
+}
+
+.cart-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.cart-bottom-left p {
+    color: #000;
+    font-family: "Noto Serif";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.cart-bottom-left input[type="text"] {
+  width: 100%;
+  padding: 15px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+}
+
+.cart-bottom-right {
+    margin-top: 30px;
+}
+.cart-button {
+    font-family: "Noto Serif";
+    color: black;
+    background: #C5EBB4;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 400;
+    padding: 10px;
+    border-radius: 10%;
 }
